add price-add gallery rbx

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         работаем на базе конструкторских бюро и производственных мощностей АО «Кировский завод» и
       АО «Ижорский завод» (Санкт-Петербург).</p>
       <p>
-        <b>ООО "НОВОШИН"</b> совместно с <b>ООО «Гостар»</b> (Санкт-Петербург) выпускает <b>весь спектр машин
+        <b>ООО "НОВОШИН"</b> выпускает <b>весь спектр машин
         и оборудования для переработки шин</b>, включая оборудование для конечной переработки
         резиновой крошки в изделия. Это оборудование позволяет в разы сократить потребление
         электрической энергии, по сравнению с другими аналогичными образцами и получить
@@ -148,14 +148,9 @@
   <div class="row">
     <div class="col-md-12 col-lg-12">
       <!-- <h3 class="text-center">Изготовление и продажа оборудования для переработки шин</h3> -->
-      <p><b>Реализуются следующие виды оборудования:</b>
-        <ul>
-          <li><p><b>Линия по переработке грузовых шин</b> ГС-500 и ГС-750. Мощность «входа» - 500 и 750 кг в час.
-        Выход готовой продукции, соответственно, 320 кг в час и 520 кг в час.</p></li>
-          <li><p><b>Универсальная линия по переработке грузовых и легковых шин</b> NSH-750. Мощность «входа»
+      <p><b>Реализуется </b><b>универсальная линия по переработке грузовых и легковых шин</b> NSH-750. Мощность «входа»
         – 750 кг сырья в час. Выход готовой продукции до 500 кг в час. Потребляемая мощность – 80-85
-      кВт.</p></li>
-        </ul>
+      кВт.
         </p>
       <div class="row">
         <div class="col-md-12">
@@ -171,30 +166,47 @@
   </div>
 </section>
 
-<!-- Portfolio Grid Section
-<section class="portfolio" id="portfolio">
+
+<section class="aboutus" id="aboutus">
   <div class="container">
-    <h2 class="text-center text-uppercase text-secondary mb-0">Галлерея</h2>
+    
     <hr class="star-dark mb-5">
     <div class="row">
       <div class="col-md-12">
+        <div class="rbximg">
+          <p>Мы являемся официальными диллерами компании "Раблекс"</p>
+          <img src="/img/rabblex.png" alt="">
+        </div>  
         <div class="popup-gallery">
-          <a href="img/prod/1.jpeg" title=""><img src="img/prod/1.jpeg" width="350" height="450"></a>
-          <a href="img/prod/2.jpeg" title=""><img src="img/prod/2.jpeg" width="350" height="450"></a>
-          <a href="img/prod/3.jpeg" title=""><img src="img/prod/3.jpeg" width="350" height="450"></a>
-          <a href="img/prod/4.jpeg" title=""><img src="img/prod/4.jpeg" width="350" height="450"></a>
-          <a href="img/prod/5.jpeg" title=""><img src="img/prod/5.jpeg" width="350" height="450"></a>
-          <a href="img/prod/6.jpeg" title=""><img src="img/prod/6.jpeg" width="350" height="450"></a>
-          <a href="img/prod/7.jpeg" title=""><img src="img/prod/7.jpeg" width="350" height="450"></a>
-          <a href="img/prod/8.jpeg" title=""><img src="img/prod/8.jpeg" width="350" height="450"></a>
-          <a href="img/prod/9.jpeg" title=""><img src="img/prod/9.jpeg" width="350" height="450"></a>
-          <a href="img/prod/10.jpeg" title=""><img src="img/prod/10.jpeg" width="350" height="450"></a>
-          <a href="img/prod/11.jpeg" title=""><img src="img/prod/11.jpeg" width="350" height="450"></a>
+          <a href="img/rbx/1.png" title=""><img src="img/rbx/1.png" width="350" ></a>
+          <a href="img/rbx/2.png" title=""><img src="img/rbx/2.png" width="350" ></a>
+          <a href="img/rbx/3.png" title=""><img src="img/rbx/3.png" width="350" ></a>
+          <a href="img/rbx/4.png" title=""><img src="img/rbx/4.png" width="350" ></a>
+          <a href="img/rbx/5.png" title=""><img src="img/rbx/5.png" width="350" ></a>
+          <a href="img/rbx/6.png" title=""><img src="img/rbx/6.png" width="350" ></a>
+          
         </div>
       </div>
     </div>
   </div>
-</section> -->
+</section>
+
+  <section class="aboutus" id="aboutus">
+    <div class="container">
+     <h2 class="text-center text-uppercase text-secondary mb-0">ЦЕНЫ</h2>
+     <hr class="star-dark mb-5">
+      <div class="row">
+        <div class="col-md-6 col-lg-6">
+          <img src="/img/logo.png" height="30" alt="">
+          <a href="/price/novoshin.docx">Прайс-лист на продукцию ООО "НОВОШИН"</a>
+        </div> 
+        <div class="col-md-6 col-lg-6">
+            <img src="/img/rabblex.png" height="20" alt="">
+            <a href="/price/rbx.docx">Прайс-лист на продукцию ООО "РАБЛЕКС ИНДАСТРИ"</a>
+          </div>
+      </div>
+    </div>
+  </section>
 
 <!-- About Section -->
 <section class="bg-primary2 text-white mb-0" id="about">
@@ -318,7 +330,7 @@
 
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Права защищены &copy; Производство резиновой крошки ООО "НОВОШИН" 2018</small>
+        <small>Права защищены &copy; Производство резиновой крошки ООО "НОВОШИН" 2019</small>
       </div>
     </div>
 
