--- a/index.html
+++ b/index.html
@@ -69,56 +69,20 @@
     </div>
   </header>
 
-  <section class="aboutus" id="aboutus">
-   <div class="container">
-    <h2 class="text-center text-uppercase text-secondary mb-0">О НАС</h2>
-    <hr class="star-dark mb-5">
-    <div class="row">
-      <div class="col-md-12 col-lg-12">
-       <!--  <h3 class="text-center">Переработка шин в резиновую крошку</h3> -->
-       <p>Мы являемся производителем по своим технологиям и чертежам оборудования по переработке
-        изношенных автомобильных покрышек для грузовых автомобилей и шин для самолетов. Мы
-        работаем на базе конструкторских бюро и производственных мощностей АО «Кировский завод» и
-      АО «Ижорский завод» (Санкт-Петербург).</p>
-      <p>
-        <b>ООО "НОВОШИН"</b> выпускает <b>весь спектр машин
-        и оборудования для переработки шин</b>, включая оборудование для конечной переработки
-        резиновой крошки в изделия. Это оборудование позволяет в разы сократить потребление
-        электрической энергии, по сравнению с другими аналогичными образцами и получить
-      качественную крошку различных фракций.</p>
-      <p>
-        Важной составляющей нашей деятельности является то, что <b>мы не только производим
-        оборудование, но и сами работаем на нем</b>. Работу нашего оборудования можно увидеть на
-        наших производственных площадях в Калужской области, неподалеку от границ Новой Москвы.
-        Это является дополнительной гарантией качества нашего оборудования. Оборудование,
-        производимое нами, потребляет мало электроэнергии, легко монтируется, требует сравнительно
-        небольших площадей, сроки его изготовления намного меньше, чем у наших конкурентов.
-      Соответственно, и цены оборудования намного ниже, чем у других производителей</p><p>
-      </p><p>
-        Мы работаем по всей России и странам СНГ. Важно отметить, что мы <b>НЕ</b> переделываем, <b>НЕ</b>
-        модернизируем и <b>НЕ</b> доукомплектовываем КИТАЙСКОЕ ОБОРУДОВАНИЕ и его российские
-      копии.</p>
-      
-    </div>
-    
-  </div>
-</section>
-
 <section class="aboutus" id="aboutus">
  <div class="container">
-  <h2 class="text-center text-uppercase text-secondary mb-0">ПРОИЗВОДСТВО КРОШКИ</h2>
+  <h2 class="text-center text-uppercase text-secondary mb-0">ПРОИЗВОДСТВО РЕЗИНОВОЙ КРОШКИ И ПЛИТКИ</h2>
   <hr class="star-dark mb-5">
   <div class="row">
     <div class="col-md-12 col-lg-12">
       <!-- <h3 class="text-center">Производство плитки из резиновой крошки</h3> -->
       <p> Мы <b>продаем резиновую крошку</b> своего <b>собственного производства</b>, <b>плитку</b>, изготовленную на
-      <b>прессах горячего прессования собственного производства</b>, используя принципиально новые
+      <b>прессах холодного прессования собственного производства</b>, используя принципиально новые
       технологии. Это позволяет резко сократить энергопотребление, снизить затраты на производство и
     повысить качество изготовляемой продукции.</p>
     <p>Реализуем с нашего склада
       <ul>
-        <li><p><b>все виды фракций высококачественной крошки</b>, как черной, так и цветной по цене от 14,25
-      рубля за кг.</p></li>
+        <li><p><b>все виды цветной высококачественной крошки</b> по цене от 45,50 рублей за кг.</p></li>
         <li><p><b>плитку из крошки</b> собственного производства различной толщины и конфигурации по цене
     от 635 рублей за 1м2</p></li>
       </ul>
@@ -139,31 +103,6 @@
     </div>
   </div>
 </div>
-</section>
-
-<section class="aboutus" id="aboutus">
- <div class="container">
-  <h2 class="text-center text-uppercase text-secondary mb-0">РЕАЛИЗАЦИЯ ОБОРУДОВАНИЯ</h2>
-  <hr class="star-dark mb-5">
-  <div class="row">
-    <div class="col-md-12 col-lg-12">
-      <!-- <h3 class="text-center">Изготовление и продажа оборудования для переработки шин</h3> -->
-      <p><b>Реализуется </b><b>универсальная линия по переработке грузовых и легковых шин</b> NSH-750. Мощность «входа»
-        – 750 кг сырья в час. Выход готовой продукции до 500 кг в час. Потребляемая мощность – 80-85
-      кВт.
-        </p>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="popup-gallery">
-            <a href="img/prod/3/1.jpg" title=""><img src="img/prod/3/1.jpg" width="270" height="250"></a>
-            <a href="img/prod/3/2.jpg" title=""><img src="img/prod/3/2.jpg" width="270" height="250"></a>
-            <a href="img/prod/3/3.jpg" title=""><img src="img/prod/3/3.jpg" width="270" height="250"></a>
-            <a href="img/prod/3/4.jpg" title=""><img src="img/prod/3/4.jpg" width="270" height="250"></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </section>
 
 
